# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [3.5.9] - 18-01-2022

- ROLETA!! Sabe o jogo de azar da roleta? A Menhera agora tem ele! Teste agora mesmo com `/roleta`

## [3.5.8] - 17-01-2022

### Added

- PreviewMode: Usuários podem ter uma preview de temas antes de os comprar no `/loja comprar temas`

### Fixed

- Total anjos caçados aparece no `/status cacar`

## [3.5.7] - 13-01-2022

### Added

- Comandos de economia agora tem um limite mínimo e máximo de valores predefinido

### Fixed

- O comando `/inventário` voltou a funcionar

## [3.5.6] - 12-04-2021

### Added

- Novo tema de perfil! **Guerreiro Aposentado**. Criado por Relkhin#4842 (853341889016365097)
- Usuários podem criar temas! Etes usuários recebem uma participação de lucros dos seus temas vendidos!
- Novo Comando! `/status design`. Com este comando é possivel ver as informações de algum designer, como a quantidade de vendas e o lucro!

### Fixed

- Título do embed de máximo de prêmios ao votar

## [3.5.5] 11-30-2021

### Added

- Novos Itens Mágicos para aceleação de caças! `Ampulheta Gigante` (Gigantes) - Drop: 0.46%. `Harpa Celestial` (Anjos) - Drop: 0.32156%. `Trombetas dos Céus` (Arcanjos) - Drop: 0.22216%. `Chave do Acampamento dos Meio Sangue` (Semideuses) - Drop: 0.11985%. `Cabeça da Medusa` (Deuses) - Drop: 0.0666%

### Changed

- Probabilidade de alguns itens de caça foram mudadas! **O Colt**: 1: `46%` -> `38%` | 2: `18%` -> `24%` | 5: `9%` -> `11%`. **Deicídio**: 0: `75%` -> `82%` | 1: `25%` -> `18%`
- O comando `/loja comprar temas` foi melhorado para facilitar o uso
- Votos especiais mostram os upvotes novamente

## [3.5.3] 2021-11-30

### Added

- Novo layout de perfil! Clima Natalino!