@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 ## [3.5.9] - 18-01-2022
 
 - ROLETA!! Sabe o jogo de azar da roleta? A Menhera agora tem ele! Teste agora mesmo com `/roleta`
+- JOGO DO BICHO!! Vocês devem conhecer o jogo do bicho, né? Na Menhera, a cada 5 horas será sorteado um novo jogo do bicho! Usuários podem se juntar à essa aposta usando `/bicho`
 
 ## [3.5.8] - 17-01-2022
 
